# pydantic-demo

./: .tool-versions  README.md  pyproject.toml
src/typer_demo/: __init__.py
tests/: test_main.py
