[project]
name = "typer-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jens Peder Meldgaard", email = "jpm@halfspace.io" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.1",
]

[project.scripts]
typer-demo = "typer_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]
